Application header z-index bug fixed.

--- a/sources/easygenerator.Web/Content/shell.less
+++ b/sources/easygenerator.Web/Content/shell.less
@@ -34,7 +34,7 @@
         position: fixed;
         left: 0;
         top: 0;
-        z-index: 2000;
+        z-index: 2100;
         width: 100%;
 
         .content-section-wrapper .content-section {
